# lu-lab-tracker

./: LICENSE  README.md  pyproject.toml  tox.ini
src/lu_lab_tracker/: __init__.py  _reader.py  _version.py  _widget.py  _writer.py  napari.yaml
src/lu_lab_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_reader.py  test_widget.py  test_writer.py
